<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:minHeight="48dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="#535353"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buy_rate"
        tools:text="@string/bank"/>

    <TextView
        android:id="@+id/buy_rate"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:textColor="#535353"
        android:gravity="end"
        android:text="@string/buy"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintEnd_toStartOf="@id/sell_rate"
        app:layout_constraintStart_toEndOf="@id/name"/>

    <TextView
        android:id="@+id/sell_rate"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#535353"
        android:gravity="end"
        android:text="@string/sell"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintStart_toEndOf="@id/buy_rate"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
