<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.gevondov.rates.widgets.ForegroundImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg_bank_header"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:foreground="@drawable/gradient_bank_header"
        tools:foreground="@drawable/gradient_bank_header" />

    <View
        android:id="@+id/info_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_bank_header_info"
        app:layout_constraintTop_toTopOf="@+id/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:padding="16dp"
        android:background="@drawable/bg_bank_header_icon"
        app:srcCompat="@drawable/ic_bank"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/name"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background"
        tools:text="InecoBank" />

    <TextView
        android:id="@+id/branch_name"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background"
        tools:text="Abovyan" />

    <View
        android:id="@+id/top_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/branch_name"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background" />

    <TextView
        android:id="@+id/address"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/top_divider"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background"
        tools:text="Sahmanadrutyan hraparak 7/3" />

    <TextView
        android:id="@+id/phone"
        style="@style/Text"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background"
        tools:text="+37422220625" />

    <TextView
        android:id="@+id/phone_title"
        style="@style/Text.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_number"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background"/>

    <LinearLayout
        android:id="@+id/working_days_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/phone_title"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background"
        tools:layout_height="52dp"
        tools:background="@color/colorAccent" />

    <TextView
        android:id="@+id/working_days_title"
        style="@style/Text.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/working_days"
        app:layout_constraintTop_toBottomOf="@id/working_days_container"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background"/>

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="42dp"
        android:background="@color/colorAccent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/working_days_title"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background" />

    <TextView
        android:id="@+id/show_on_map"
        style="@style/Text.ShowOnMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="56dp"
        android:text="@string/show_on_map"
        app:layout_constraintTop_toBottomOf="@id/bottom_divider"
        app:layout_constraintStart_toStartOf="@id/info_background"
        app:layout_constraintEnd_toEndOf="@id/info_background"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
